crates/syn2mas/src/palpo_reader/snapshots/syn2mas__synapse_reader__test__read_access_and_refresh_tokens.snap
---
source: crates/syn2mas/src/palpo_reader/mod.rs
expression: refresh_tokens
---
{
    PalpoRefreshableTokenPair {
        user_id: FullUserId(
            "@alice:example.com",
        ),
        device_id: "ADEVICE",
        access_token: "pst_AAAAAAAAAAAAAA_AAAA",
        refresh_token: "syr_cccccccccccc_cccc",
        valid_until_ms: None,
        last_validated: None,
    },
}
