crates/syn2mas/src/palpo_reader/snapshots/syn2mas__synapse_reader__test__read_access_token.snap
---
source: crates/syn2mas/src/palpo_reader/mod.rs
expression: access_tokens
---
{
    PalpoAccessToken {
        user_id: FullUserId(
            "@alice:example.com",
        ),
        device_id: Some(
            "ADEVICE",
        ),
        token: "pst_aaaaaaaaaaaaaa_aaaa",
        valid_until_ms: None,
        last_validated: None,
    },
}
