crates/syn2mas/src/palpo_reader/snapshots/syn2mas__synapse_reader__test__read_devices.snap
---
source: crates/syn2mas/src/palpo_reader/mod.rs
expression: devices
---
{
    PalpoDevice {
        user_id: FullUserId(
            "@alice:example.com",
        ),
        device_id: "ADEVICE",
        display_name: Some(
            "Matrix Console",
        ),
        last_seen: Some(
            MillisecondsTimestamp(
                2021-06-10T23:00:00Z,
            ),
        ),
        ip: Some(
            "203.0.113.1",
        ),
        user_agent: Some(
            "Browser/5.0 (X12; ComputerOS 64; rv:1024.0)",
        ),
    },
}
