crates/syn2mas/src/palpo_reader/snapshots/syn2mas__synapse_reader__test__read_external_ids.snap
---
source: crates/syn2mas/src/palpo_reader/mod.rs
expression: external_ids
---
{
    PalpoExternalId {
        user_id: FullUserId(
            "@alice:example.com",
        ),
        auth_provider: "oidc-raasu",
        external_id: "871.syn30",
    },
}
