crates/syn2mas/src/palpo_reader/snapshots/syn2mas__synapse_reader__test__read_users.snap
---
source: crates/syn2mas/src/palpo_reader/mod.rs
expression: users
---
{
    PalpoUser {
        name: FullUserId(
            "@alice:example.com",
        ),
        password_hash: Some(
            "$2b$12$aaa/aaaaaaaaaa.aaaaaaaaaaaaaaa./aaaaaaaaaaaaaaaaaaa/A",
        ),
        admin: PalpoBool(
            false,
        ),
        deactivated: PalpoBool(
            false,
        ),
        locked: false,
        creation_ts: SecondsTimestamp(
            2018-06-30T21:26:02Z,
        ),
        is_guest: PalpoBool(
            false,
        ),
        appservice_id: None,
    },
}
